# SlickGFX

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  render_pipeline_description.xini  sample.exr  screen_fragment.glsl  screen_texture.fragment.glsl  screen_vertex.glsl  screenspace.glsl  screenspace_shader.cpp
examples/src/: screenspace_shader.cpp  textured_rectangle.cpp
sGFX/: CMakeLists.txt  Core.hpp  Resources.hpp
sGFX/Core/: AttributeBuffer.cpp  AttributeBuffer.hpp  CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp  GL.cpp  GL.hpp  ImageData.h  Mesh.hpp  RenderAPIContext.cpp  RenderAPIContext.hpp  RenderPass.cpp  RenderPass.h  RenderPass.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Types.cpp  Types.h  Types.hpp
sGFX/Core/GL/: flextGL.c  flextGL.cpp  flextGL.h
sGFX/Core/ImageFormats/: tinyexr.h
sGFX/Resources/: CMakeLists.txt  MatrixN.h  MatrixN.hpp  Signal.hpp  Unorm.hpp  VectorN.h  VectorN.hpp
slick/: slick.hpp
test/: CMakeLists.txt  renderpass_test.cpp  test_main.cpp  test_utils.h  yestest.h
